<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/grey9C"
        android:textAllCaps="true"
        android:text="@string/error_password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey9C"
        android:textSize="25sp"
        android:text="@string/invalid_password"/>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/admin_menu_btn_passive"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:text="@string/ok"/>

</LinearLayout>