<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/admin_menu_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingRight="64dp"
            android:paddingLeft="64dp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:background="@drawable/simple_border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey9C"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_admin_password"
                android:textColor="@color/grey9C"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/grey9C"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/password_border"
                    android:gravity="start|center_vertical"
                    android:inputType="number"
                    android:maxLines="1"
                    android:minEms="8"
                    android:padding="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/admin_menu_btn_selector"
                    android:paddingLeft="64dp"
                    android:paddingRight="64dp"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="22sp"/>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/admin_menu_btn_selector"
                    android:paddingLeft="64dp"
                    android:paddingRight="64dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="22sp"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="15dp" />

        <TextClock
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/grey9C"
            android:layout_alignParentStart="true"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/tv_build_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/grey9C"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="15dp" />

        <ImageView
            android:layout_width="143dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:background="@drawable/logo_bw_edison_interactive"/>

        <ImageView
            android:id="@+id/iv_qr_code"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
</layout>